--- a/big.html
+++ b/big.html
@@ -1,3 +1,3 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, delectus doloribus. Odit dolores nostrum quo
-	officia doloremque corrupti saepe excepturi nobis corporis doloribus quae eveniet quia aliquid recusandae, cumque
+	officia doloremque corrupti saepe excepturi
 	dignissimos.</p>
